# TDD_for_Embedded_C

./: CMakeLists.txt  CMakeLists.txt.in  README.md
include/HomeAutomation/: LightController.h  LightScheduler.h  TimeService.h
include/LedDriver/: LedDriver.h
include/util/: BOOL.h  RuntimeError.h
mocks/: CMakeLists.txt  RuntimeErrorStub.c  RuntimeErrorStub.h
src/: CMakeLists.txt
src/HomeAutomation/: LightScheduler.c
src/LedDriver/: LedDriver.c
tests/: AllTests.cpp  CMakeLists.txt
tests/HomeAutomation/: CMakeLists.txt  FakeTimeService.c  FakeTimeService.h  FakeTimeServiceTest.cpp  LightControllerSpy.c  LightControllerSpy.h  LightSchedulerTest.cpp
unity/: AllTests.c  CMakeLists.txt
unity/LedDriver/: CMakeLists.txt  LedDriverTest.c  LedDriverTestRunner.c
